# sonification-toolkit

./: .gitignore  LICENSE  README.md  lightcurve_table.csv  locustfile.py  package-lock.json  package.json  pyproject.toml  requirements.txt
.github/workflows/: build.yml
app/: package-lock.json  package.json
app/app/: page.tsx
app/app/components/: Home.tsx  List.js
electron/: main.cjs  main.js  package-lock.json  package.json  splash.html
src/: extensions.py  main.py  star_query.py  testing.py
src/backend/: README.md  StorageManager.py  StyleFile.py  add_connections.py  backend.spec  benchmark.py  config.py  const_plot_test.py  constants.py  constellations.py  constellations_test.py  context.py  core.py  events_test.py  events_test2.py  extensions.py  file_reference.md  generator_mods.py  get_lcs.py  light_curve.py  light_curve_test.py  light_curves.py  main.py  monitor_backend.py  new_test.py  night_sky.py  param_descriptions.py  paths.py  performance.py  pyproject.toml  request_models.py  requirements-base.txt  requirements-windows.txt  requirements.txt  scales.py  settings.py  sounds.py  star_query.py  style_schemas.py  testing.py  (+2 more)
src/backend/api/: light_curve.py
src/backend/settings/: settings.yml
src/backend/style_files/: my_style.yml
src/backend/tmp/: 1cf78b2e-fdd4-4202-883a-d9b395a9accd.fits  musical.yml  sci_fi.yml
src/frontend/: index.html  package-lock.json  package.json
src/frontend/src/: App.css  App.tsx  Menu.tsx  apiConfig.ts  index.css  theme.ts
src/style_files/: my_style.yml  schema.yml  template.yml  windy.yml
(+112 files in other folders)
